# KID

./: Dockerfile  README.md  app.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
deploy/freeradius/: jaguar-rlm-rest.conf
frontend/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
tests/: test_api.py
