[project]
name = "jaguar-technologies"
version = "0.1.0"
description = "ISP Wi-Fi billing, RADIUS, security, payment, and satellite integration platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pyotp>=2.9.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.1.1"
]

[project.optional-dependencies]
test = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
